--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Jesse
-                        <span class="text-primary">Ely</span>
+                        <span class="text-primary"></span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                       <a href="mailto:name@email.com">name@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
@@ -57,7 +56,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Experience-->
+            <!-- Experience
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
@@ -95,8 +94,8 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Education-->
+            <hr class="m-0" />-->
+            <!-- Education
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
@@ -119,8 +118,8 @@
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Skills-->
+            <hr class="m-0" />-->
+            <!-- Skills
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
@@ -160,8 +159,8 @@
                     </ul>
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Interests-->
+            <hr class="m-0" />-->
+            <!-- Interests
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
@@ -169,8 +168,8 @@
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Awards-->
+            <hr class="m-0" />-->
+            <!-- Awards
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
@@ -216,7 +215,7 @@
                     </ul>
                 </div>
             </section>
-        </div>
+        </div>-->
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
