--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary"></span>
                     </h1>
                     <div class="subheading mb-5">
-                       <a href="mailto:name@email.com">name@email.com</a>
+                       <a href="mailto:name@email.com">*********</a>
                     </div>
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
